# OmniMRZ

./: .gitignore  README.md  pyproject.toml  requirements.txt  testing.py
.github/workflows/: codeql.yml
omnimrz/: __init__.py  extractor.py  parser.py  utils.py  validation.py
