[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnimrz"
version = "0.1.0"
description = "Fast and robust MRZ extraction, parsing, and validation using PaddleOCR"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Azwad Fawad Hasan", email = "azwadfawadhasan@gmail.com" }
]
keywords = ["mrz", "passport", "ocr", "identity", "paddleocr"]

dependencies = [
    "opencv-python",
    "numpy",
    "paddleocr>=2.6.0",
    "paddlepaddle"
]

[project.urls]
Homepage = "https://github.com/AzwadFawadHasan/OmniMRZ"
Issues = "https://github.com/AzwadFawadHasan/OmniMRZ/issues"

[tool.setuptools.packages.find]
where = ["."]
